--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mailtrap": "^3.0.0",
     "mongoose": "^6.4.2",
+    "nodemailer": "^6.7.8",
     "web3": "^1.7.4"
   },
   "devDependencies": {
