--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URI1='mongodb://localhost:27017/vault'
 MONGO_URI='mongodb+srv://sabz:sabali@cluster0.8itaiuh.mongodb.net/?retryWrites=true&w=majority'
 TOKEN_KEY='12343rwfiohnvofoiwo'
+GMAIL=tzjjhevhpzarkxfg
 API_PORT=4001
