--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "stripe": "^10.8.0",
     "web3": "^1.7.4"
   },
+  "engines" : { 
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=16.0.0 <17.0.0"
+  },
   "devDependencies": {
     "nodemon": "^2.0.18"
   }
