--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  
   "name": "chat",
   "version": "1.0.0",
   "description": "",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mailtrap": "^3.0.0",
     "mongoose": "^6.4.2",
+    "node-fetch": "^3.3.0",
     "nodemailer": "^6.7.8",
     "qs": "^6.11.0",
     "stripe": "^10.8.0",
